--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         </activity>
         <activity android:name=".RegisterActivity" android:exported="false" />
         <activity android:name=".AddItemActivity" android:exported="false" />
+        <activity android:name=".MainActivity" android:exported="true" />
+        <activity android:name=".UserProfileActivity" android:exported="false" />
     </application>
 
 </manifest>
